--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "npm-fix",
-  "version": "0.0.2",
+  "name": "npm-fix-cli",
+  "version": "0.0.1",
   "private": false,
   "description": "A quick way to blow up reset npm dependencies in your project.",
-  "bin": "cli.js",
+  "bin": {
+    "npm-fix": "cli.js"
+  },
   "main": "index.js",
   "files": [
     "README.md",
