--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "npm-fix-cli",
   "version": "0.0.3",
   "private": false,
-  "description": "A quick way to blow up reset npm dependencies in your project.",
+  "description": "A quick way to reset npm dependencies in your project",
   "bin": {
     "npm-fix": "cli.js"
   },
